[package]
name = "particle_sim_v2"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-fps-counter = "0.4.0"
bevy_rapier2d = { version = "0.26.0", features = [ "simd-stable", "debug-render-2d", "parallel" ] }
rand = "0.8.5"
